test_case/rust-lang_rust/53196_411541651_12.rs
compile_fail,E0277\n// here we declare the Foo trait with a bar method\ntrait Foo {\n    fn bar(&self);\n}\n\n// we now declare a function which takes an object implementing the Foo trait\nfn some_func<T: Foo>(foo: T) {\n    foo.bar();\n}\n\nfn main() {\n    // we now call the method with the i32 type, which doesn't implement\n    // the Foo trait\n    some_func(5i32); // error: the trait bound `i32 : fy all requirements that will be used for every type parameter.\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/coercion/coerce-unsafe-to-closure.rs","byte_start":518,"byte_end":521,"line_start":12,"line_end":12,"column_start":40,"column_end":43,"is_primary":true,"text":[{"text":"    let x: Option<&[u8]> = Some(\"foo\").map(std::mem::transmute);","highlight_start":40,"highlight_end":43}],"label":"the trait `std::ops::FnOnce<(&str,)>` is not implemented for `unsafe extern \"rust-intrinsic\" fn(_) -> _ {std::intrinsics::transmute::<_, _>}`","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0277]: the trait bound `unsafe extern \"rust-intrinsic\" fn(_) -> _ {std::intrinsics::transmute::<_, _>}: std::ops::FnOnce<(&str,)>` is not satisfied\n  --> /checkout/src/test/ui/coercion/coerce-unsafe-to-closure.rs:12:40\n   |\nLL |     let x: Option<&[u8]> = Some(\"foo\").map(std::mem::transmute);\n   |                                        ^^^ the trait `std::ops::FnOnce<(&str,)>` is not implemented for `unsafe extern \"rust-intrinsic\" fn(_) -> _ {std::intrinsics::transmute::<_, _>}`\n\n"}
[00:49:36] {"message":"aborting due to previous error","code":null,"level":"error","spans":[],"children":[],"rendered":"error: aborting due to previous error\n\n"}
[00:49:36] {"message":"For more information about this error, try `rustc --explain E0277`.","code":null,"level":"","spans":[],"children":[],"rendered":"For more information about this error, try `rustc --explain E0277`.\n"}
[00:49:36] ------------------------------------------
[00:49:36] 
[00:49:36] 
[00:49olve1`: /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/crateresolve1/auxiliary/libcrateresolve1-3.so\ncrate `crateresolve1`: /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/crateresolve1/auxiliary/libcrateresolve1-2.so","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0464]: multiple matching crates for `crateresolve1`\n  --> /checkout/src/test/ui/crateresolve1.rs:16:1\n   |\nLL | extern crate crateresolve1;\n   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n   |\n   = note: candidates:\n           crate `crateresolve1`: /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/crateresolve1/auxiliary/libcrateresolve1-1.so\n           crate `crateresolve1`: /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/crateresolve1/auxiliary/libcrateresolve1-3.so\n           crate `crateresolve1`: /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/crateresolve1/auxiliary/libcrateresolve1-2.so\n\n"}
[00:49:36] {"message":"can't find crate for `crateresolve1`","code":{"code":"E0463","explanation":"\nA plugin/crate was declared but cannot be found. Erroneous code example:\n\n